--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv-extended": "^2.9.0",
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
   },
