--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,7 @@
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
