--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
     "@mui/system": "^6.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
