--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.4",
+    "change-case": "^5.4.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
