--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.4",
     "change-case": "^5.4.4",
     "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
