--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.1",
